[gd_scene load_steps=2 format=3 uid="uid://c0u5rdpkk6tp3"]

[ext_resource type="Script" path="res://HUD.gd" id="1_4sji4"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_4sji4")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -18.5
offset_right = 18.5
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "0
"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -46.5
offset_right = 140.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Dodge The Cows!!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LastScoreLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -160.0
offset_right = 112.0
offset_bottom = -89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Lastest Score :"
metadata/_edit_group_ = true

[node name="FinalScore" type="Label" parent="LastScoreLabel"]
layout_mode = 0
offset_left = 192.0
offset_right = 232.0
offset_bottom = 39.0
theme_override_font_sizes/font_size = 28
text = "0"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Start"
icon_alignment = 1

[node name="MessageTimer" type="Timer" parent="." groups=["Platform"]]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
